--- a/kmc/app/src/main/res/layout/activity_spamount_to_db.xml
+++ b/kmc/app/src/main/res/layout/activity_spamount_to_db.xml
@@ -24,17 +24,13 @@
             android:text="Special Officer"
             android:textColor="#fff"/>
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/addIndividual"
-            android:gravity="center"
-            android:onClick="generateNote"
-            android:text="Note"
-            android:layout_marginTop="5dp"
-            android:backgroundTint="@color/colorPrimary"
-            android:src="@drawable/ic_baseline_sticky_note_2_24"
-            android:textSize="20dp"
-            />
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="2dp"
+            android:onClick="search"
+            android:src="@drawable/ic_search_white"/>
+
 <!--        <TextView-->
 <!--            android:id="@+id/title"-->
 <!--            android:layout_width="0dp"-->
