--- a/kmc/app/src/main/res/layout/activity_collector_user_details_amount_dbto_ben.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_user_details_amount_dbto_ben.xml
@@ -463,6 +463,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/collectorApprovalAmount"
                     android:layout_height="wrap_content"
+                    android:inputType="number"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
