--- a/kmc/app/src/main/res/layout/activity_spuser_details_amount_release_to_db.xml
+++ b/kmc/app/src/main/res/layout/activity_spuser_details_amount_release_to_db.xml
@@ -197,6 +197,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/spAmountApproved"
                     android:layout_height="wrap_content"
+                    android:inputType="number"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
