--- a/kmc/app/src/main/res/layout/activity_spuser_details_amount_release_to_db.xml
+++ b/kmc/app/src/main/res/layout/activity_spuser_details_amount_release_to_db.xml
@@ -130,19 +130,22 @@
             <TextView
                 android:id="@+id/requestedAmount"
                 android:textSize="20sp"
-                android:textColor="#000000"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <TextView
                 android:id="@+id/approvedAmount"
                 android:textSize="20sp"
-                android:textColor="#000000"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <TextView
                 android:id="@+id/dbAmount"
                 android:textSize="20sp"
-                android:textColor="#000000"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <!--            <TextView-->
