--- a/kmc/app/src/main/res/layout/activity_collector_amount_dbto_ben.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_amount_dbto_ben.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CLogin.CollectorAmountToDB">
+    tools:context=".CLogin.CollectorAmountDBToBen">
     <include
         layout="@layout/appbar"/>
 
@@ -34,6 +34,19 @@
             android:paddingLeft="20dp"
             android:text="Collector"
             android:textColor="#fff" />
+        <ImageButton
+            android:id="@+id/cancelAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="cancel"
+            android:onClick="cancelAll"
+            android:visibility="gone"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_outline_clear_24"
+            android:textSize="20dp"
+            />
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
