--- a/kmc/app/src/main/res/layout/activity_collector_user_details_amount_dbto_ben.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_user_details_amount_dbto_ben.xml
@@ -291,7 +291,8 @@
                     android:id="@+id/soQuotationAmount"
                     android:textSize="20sp"
                     android:padding="7dp"
-                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"/>
             </androidx.cardview.widget.CardView>
@@ -310,7 +311,8 @@
                     android:id="@+id/dbAmount"
                     android:textSize="20sp"
                     android:padding="7dp"
-                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"/>
             </androidx.cardview.widget.CardView>
