--- a/kmc/app/src/main/res/layout/activity_collectorzone.xml
+++ b/kmc/app/src/main/res/layout/activity_collectorzone.xml
@@ -35,6 +35,19 @@
                     android:text="Collector"
                     android:textColor="#fff" />
         <ImageButton
+            android:id="@+id/cancelAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="cancel"
+            android:onClick="cancelAll"
+            android:visibility="gone"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_outline_clear_24"
+            android:textSize="20dp"
+            />
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/addIndividual"
