--- a/kmc/app/src/main/res/layout/activity_collector_list_ben.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_list_ben.xml
@@ -25,11 +25,37 @@
             android:text="Collector"
             android:textColor="#fff"/>
         <ImageButton
+            android:id="@+id/cancelAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="cancel"
+            android:onClick="cancelAll"
+            android:visibility="gone"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_outline_clear_24"
+            android:textSize="20dp"
+            />
+        <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@color/colorPrimary"
             android:onClick="search"
             android:src="@drawable/ic_search_white"/>
+        <ImageButton
+            android:id="@+id/checkAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="check"
+            android:onClick="checkAll"
+            android:visibility="gone"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_baseline_check_24"
+            android:textSize="20dp"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_below="@+id/layout1"
