--- a/kmc/app/src/main/res/layout/activity_collecto_grounding.xml
+++ b/kmc/app/src/main/res/layout/activity_collecto_grounding.xml
@@ -35,6 +35,19 @@
             android:src="@drawable/ic_search_white"
             android:textSize="20dp"
             />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:onClick="UnitSearch"
+            android:text="Search"
+            android:visibility="gone"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_baseline_category_24"
+            android:textSize="20dp"
+            android:id="@+id/unit_search"
+            />
 
     </LinearLayout>
     <LinearLayout
