--- a/kmc/app/src/main/res/layout/activity_collector_search.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CLogin.CollectorSearch">
+    tools:context=".CLogin.CollectorUnitSearch2">
 
 
     <LinearLayout
@@ -21,7 +21,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Search"
+            android:id="@+id/searchboxLayout"
             android:layout_below="@id/textView1"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
             >
@@ -29,6 +29,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="Search"
                 android:id="@+id/searchbox"
                 />
 
@@ -42,6 +43,41 @@
             android:layout_width="80dp"
             android:onClick="searchbutton"
             />
+        <ImageButton
+            android:id="@+id/cancelAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="cancel"
+            android:onClick="cancelAll"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_outline_clear_24"
+            android:textSize="20dp"
+            android:visibility="gone"
+            />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            android:id="@+id/view"
+            android:layout_weight="1"/>
+        <ImageButton
+            android:id="@+id/checkAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="check"
+            android:onClick="checkAll"
+            android:visibility="gone"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_baseline_check_24"
+            android:textSize="20dp"
+            />
+
+
+
 
 
     </LinearLayout>
